; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_change_conn_simple.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_change_conn_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conn_target = type { i32 }
%struct.connection = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @change_conn_simple(%struct.conn_target* %0, %struct.connection* %1) #0 {
  %3 = alloca %struct.conn_target*, align 8
  %4 = alloca %struct.connection*, align 8
  store %struct.conn_target* %0, %struct.conn_target** %3, align 8
  store %struct.connection* %1, %struct.connection** %4, align 8
  %5 = load %struct.conn_target*, %struct.conn_target** %3, align 8
  %6 = getelementptr inbounds %struct.conn_target, %struct.conn_target* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp slt i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.conn_target*, %struct.conn_target** %3, align 8
  %12 = getelementptr inbounds %struct.conn_target, %struct.conn_target* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = sub nsw i32 0, %13
  %15 = load %struct.conn_target*, %struct.conn_target** %3, align 8
  %16 = getelementptr inbounds %struct.conn_target, %struct.conn_target* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
